--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
-encoding//Java/src/Main.java=UTF-8
+encoding//Java/src/Gene.java=UTF-8
+encoding//Java/src/Predator.java=UTF-8
 encoding//Java/src/Prey.java=UTF-8
