--- a/Java/src/.settings/org.eclipse.core.resources.prefs
+++ b/Java/src/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding/Controller.java=UTF-8
 encoding/Display.java=UTF-8
 encoding/Predator.java=UTF-8
 encoding/Prey.java=UTF-8
