--- a/Java/.settings/org.eclipse.core.resources.prefs
+++ b/Java/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/Controller.java=UTF-8
 encoding//src/Gene.java=UTF-8
 encoding//src/Predator.java=UTF-8
 encoding//src/Prey.java=UTF-8
